dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "a0e332e88d5b74a1981bd9dd2a8b13c8-1849912143.us-west-1.elb.amazonaws.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-service
              port:
                number: 80
